--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 csv = "1.3.0"
 reqwest = {version = "0.12.2", features = ["blocking"]}
 serde_json = "1.0.114"
+
+[profile.release]
+strip = true
+opt-level = 3
+lto = true
