--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.37"
 csv = "1.3.0"
 reqwest = {version = "0.12.2", features = ["blocking"]}
 serde_json = "1.0.114"
